# wsc

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.linter  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: build-image.yml  linter-check.yml
app/: logger.py  main.py  settings.py
app/adapter/: __init__.py  dto.py  hasher.py
app/adapter/dto/: chat.py  user.py  ws.py
app/adapter/store/: chat.py  messages.py  models.py  sql_adapter.py  user.py
app/http/: app.py  jwt.py
app/http/api/: auth.py  chat.py  user.py  websocket.py
docker/: docker-compose.infra.yaml
migrations/: env.py
migrations/versions/: 296be78caa3d_init_db.py  53593b91642e_add_read_messages.py
ui/: index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
ui/src/: App.vue  main.ts
ui/src/api/: api.ts  auth.interceptor.ts
ui/src/components/: DisconnectAlert.vue  MessageItem.vue  Navigation.vue  SystemMessage.vue
ui/src/router/: index.ts
ui/src/store/: EventBus.ts  index.ts  stats.ts
ui/src/store/modules/: auth.ts  chats.ts  messages.ts  users.ts
ui/src/views/: ChatDialogView.vue  ChatsView.vue  LoginView.vue  UsersView.vue
